<resources>
    <string name="app_name">myproyect</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="error_login">el sistema no pudo conectarse a google play services, intente mas tarde</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login_result">LoginResult</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_contact">ContactActivity</string>
    <string name="email">email</string>
    <string name="subject">Subject</string>
    <string name="message">message</string>
    <string name="send">Send</string>
    <string name="title_activity_property">PropertyActivity</string>
    <string name="title_activity_gallery">GalleryActivity</string>
    <string name="title_activity_mail">MailActivity</string>
    <string name="title_activity_compra">CompraActivity</string>
    <string name="precio_usd">precio USD</string>
    <string name="superficie_m2">superficie m2</string>
    <string name="seleccionar_imagen">seleccionar imagen</string>
    <string name="descripcion">Descripcion</string>
    <string name="servicios">Servicios</string>
    <string name="ubicacion">ubicacion</string>
    <string name="todo_t1">TODO</string>
    <string name="title_activity_perfil">PerfilActivity</string>
    <string name="title_activity_edit_perfil">EditPerfilActivity</string>
    <string name="android_studio_1">Android Studio</string>
    <string name="android_studio">Android Studio</string>
    <string name="todo_t">TODO</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="telefono_fijo">telefono fijo</string>
    <string name="movil">movil</string>
    <string name="telefono">Telefono</string>
    <string name="correo_gmail_com">Correo_@gmail.com</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="ciudad">Ciudad</string>
    <string name="ingresar">Ingresar</string>
    <string name="editar_perfil">Editar Perfil</string>
    <string name="todo">TODO</string>
    <string name="title_activity_detaills">DetaillsActivity</string>
    <string name="chato_briane" />
    <string name="_0" />
    <string name="title_activity_busqueda_mapa">BusquedaMapaActivity</string>
    <string name="agregar">AGREGAR</string>
    <string name="registrar">REGISTRAR</string>
    <string name="cancelar">CANCELAR</string>
    <string name="buscar_propiedad">Buscar Propiedad</string>
    <string name="bienvenido">BIENVENIDO</string>
    <string name="guardar_ubicacion">Guardar Ubicacion</string>
    <string name="seleccionar_fotos">Seleccionar Fotos</string>
    <string name="tomar_foto">Tomar Foto</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="title_activity_latiylongi__maps">Map</string>
</resources>
