<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.victor.myproyect.EditPerfilActivity"
    tools:showIn="@layout/activity_edit_perfil">

    <ImageView
        android:id="@+id/foto1"
        android:layout_width="153dp"
        android:layout_height="123dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_base"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/todo"/>


    <EditText
        android:id="@+id/phone1"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/telefono_fijo"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/phone2"
        app:layout_constraintHorizontal_bias="0.378"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname" />

    <EditText
        android:id="@+id/phone2"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/telefono"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastname" />

    <EditText
        android:id="@+id/movil"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/movil"
        android:inputType="phone"
        app:layout_constraintEnd_toStartOf="@+id/city"
        app:layout_constraintHorizontal_bias="0.411"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone1" />

    <EditText
        android:id="@+id/email_p"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/correo_gmail_com"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/city" />

    <EditText
        android:id="@+id/name"
        android:layout_width="343dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:hint="@string/nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foto1" />

    <EditText
        android:id="@+id/lastname"
        android:layout_width="340dp"
        android:layout_height="45dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:hint="@string/apellido"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <EditText
        android:id="@+id/city"
        android:layout_width="155dp"
        android:layout_height="45dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:hint="@string/ciudad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phone2" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Guardar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_p" />

    <Button
        android:id="@+id/select_im_perf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="onclick"
        android:text="@string/seleccionar_imagen"
        app:layout_constraintBottom_toTopOf="@+id/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/foto"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>
