<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@drawable/reg"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".RegisterActivity"
        tools:showIn="@layout/activity_register">


        <ImageView
            android:id="@+id/foto"
            android:layout_width="153dp"
            android:layout_height="123dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_base"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/todo" />


        <Spinner
            android:id="@+id/tipo_operacion"
            android:layout_width="173dp"
            android:layout_height="0dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/select_Image"
            tools:ignore="MissingConstraints" />

        <EditText
            android:textColor="@android:color/white"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:id="@+id/precio"
            android:layout_width="157dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/precio_usd"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toStartOf="@+id/superficie"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipo_operacion"
            tools:ignore="MissingConstraints" />

        <EditText
            android:textColor="@android:color/white"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:id="@+id/superficie"
            android:layout_width="157dp"
            android:layout_height="45dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            android:hint="@string/superficie_m2"
            android:inputType="numberDecimal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tipo_operacion"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/select_Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:onClick="onclick"
            android:text="@string/seleccionar_imagen"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/foto" />

        <EditText
            android:textColor="@android:color/white"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_marginTop="8dp"
            android:hint="@string/descripcion"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/superficie" />

        <EditText
            android:textColor="@android:color/white"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:id="@+id/servicios"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginTop="8dp"
            android:hint="@string/servicios"
            android:inputType="text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <EditText
            android:textColor="@android:color/white"
            android:background="@color/common_google_signin_btn_text_light_default"
            android:id="@+id/direccion"
            android:layout_width="match_parent"
            android:layout_height="78dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="1dp"
            android:hint="direccion"
            android:inputType="text"
            app:layout_constraintBottom_toTopOf="@+id/register_data"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servicios" />


        <Button
            android:id="@+id/register_data"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="116dp"
            android:layout_marginStart="8dp"
            android:text="Registrar"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ubicacion" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>